# ML101

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  noxfile.py  pyproject.toml  renovate.json  requirements.txt  ruff.toml  tox.ini
.github/: release.yml
.github/workflows/: docs.yml  pre-commit_autoupdate.yml  publish.yml  python-ci.yml  security.yml
core/: main.py
core/voice/: app.py  config.py  realtime_transcription.py
core/voice/microphone/: __init__.py  base.py  factory.py  pyaudio_input.py  registry.py  sr_input.py
core/voice/model/: recognition.py
core/voice/models/: __init__.py  audio_session.py  schemas.py
core/voice/recognition/: __init__.py  base.py  factory.py  model.py  recognizer.py  registry.py  sr_recognizer.py  vosk_recognizer.py  whisper_recognizer.py
core/voice/route/: b.py
core/voice/routes/: __init__.py  api.py  websocket.py
core/voice/utils/: __init__.py  audio_processing.py
dashboard/: .gitignore
dashboard/dashboard/: dashboard.py
tests/: test_basic.py  test_print.py
