[project]
dependencies = [
    "reflex==0.7.1",
    "speechrecognition>=3.14.1",
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
    "librosa>=0.11.0",
    "youtube-dl>=2021.12.17",
    "transformers>=4.49.0",
    "httplib2>=0.22.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.1",
    "pyannote-audio>=3.3.2",
    "pyannote-core>=5.0.0",
    "pydub>=0.25.1",
]

name = "ml101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
[tool.uv]
package = true
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["core", "dashboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codespell>=2.4.1",
    "commitizen>=4.4.1",
    "pre-commit>=4.2.0",
    "pycln>=2.5.0",
    "pyupgrade>=3.19.1",
    "ruff>=0.9.10",
    "yesqa>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.pycln]
all = true

[tool.mypy]
files = ["core", "dashboard"]
python_version = "3.12"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true


[tool.commitizen]
name = "cz_conventional_commits" # Uses the conventional commits standard
tag_format = "v$version" # Customizes the tag format
version_scheme = "pep440" # Follows the PEP 440 version scheme
version_provider = "pep621" # Uses standard pep for version management
update_changelog_on_bump = true # Automatically updates the CHANGELOG when the version is bumped
